--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="script.js"></script>
+  
+    <div id="clock-container">
+        <div id="clock">
+                00:00:00
+        </div>
+    </div>
 </body>
 </html>
