--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-  
+<!--   
     <div id="clock-container">
         <div id="clock">
                 00:00:00
         </div>
-    </div>
+    </div> -->
+    <h1 id="myHeading", style="color: aliceblue;">Welcome to developers Stack</h1>
+    <div class="myDiv">Div 01</div>
+    <div class="myDiv">Div 02</div>
+    <div class="myDiv">Div 03</div>
 
-    <script src="script.js"></script>
+    <h2>Root vegetables</h4>
+    <ul id="rVeg">
+
+        <li id="Beets">Beets</li>
+        <li id="Carrots">Carrots</li>
+        <li id="Potatos">Potatos</li>
+    </ul >
+
+
+    <h2>vegetables</h4>
+    <ul id="veg">
+        <li>Broccoli</li>
+        <li>Celeri</li>
+        <li>Onions</li>
+    </ul>
+
+
+    <script type="module" src="script.js"></script>
 </body>
 </html>
